gcc/testsuite/rust/rustc/ui/iterators/collect-into-array_dg.rs
fn main() {
    let whatever: [u32; 10] = (0..10).collect();
// { dg-error ".E0277." "" { target *-*-* } .-1 }
// { dg-note ".E0277." "" { target *-*-* } .-2 }
// { dg-note ".E0277." "" { target *-*-* } .-3 }
}

